--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -3,6 +3,7 @@
       models:
         user: ユーザー
         event: イベント
+        image: 画像
       attributes:
         user:
           id: ID
@@ -17,6 +18,8 @@
           end_time: 終了時間
           description: 勉強会概要
           capacity: 募集人数
+          image: 画像
+        image:
           image: 画像
       errors:
         messages:
